name:           boon
version:        1.0
category:       Development
synopsis:       A generator of nix files
description:
  Soon to appear.
license:        GPL
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.20
tested-with:    GHC==8.0.1
build-type:     Simple

executable boonCS
  default-language: Haskell2010
  build-depends: base
  build-depends: lens
  build-depends: gasp
  build-depends: marxup
  build-depends: lp-diagrams
  main-is: cheat-sheet.hs
