Cabal-Version:  2.4
name:           boon
version:        1.0
category:       Development
synopsis:       A generator of cheat sheet files
description:
  Soon to appear.
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
tested-with:    GHC==8.6.4
build-type:     Simple

executable boonCS
  build-tool-depends: marxup:marxup
  default-language: Haskell2010
  build-depends: base
  build-depends: lens
  build-depends: gasp
  build-depends: marxup
  build-depends: lp-diagrams
  build-depends: typography-geometry >= 1.0.1
  main-is: cheat-sheet.hs
